refactored code and test cases